# makeup

./: LICENSE  README.md  pyproject.toml
makeup/: generator.py  main.py  parser.py
tests/: test_makeup.py
